dont use Pipe for kill -3